--- a/etc/conf.templates/standalone/20-warpfleet.conf.template
+++ b/etc/conf.templates/standalone/20-warpfleet.conf.template
@@ -1,5 +1,5 @@
 //
-//   Copyright 2019  SenX S.A.S.
+//   Copyright 2019-2022  SenX S.A.S.
 //
 //   Licensed under the Apache License, Version 2.0 (the "License");
 //   you may not use this file except in compliance with the License.
@@ -19,7 +19,7 @@
 //
 
 // Comma separated list of default WarpFleet™ repositories
-warpfleet.macros.repos = https://warpfleet.senx.io/macros
+warpfleet.macros.repos = https://warpfleet.senx.io/macros/{macro}
 
 // Read timeout when fetching macro source code from a repository, in ms. Defaults to 10s.
 #warpfleet.timeout.read =
