--- a/io.warp10.ext.interpolation-warp10-ext-interpolation.conf
+++ b/io.warp10.ext.interpolation-warp10-ext-interpolation.conf
@@ -1,12 +1,6 @@
-//
-// Configuration template
-//
-// Describe here the typical configuration needed to enable
-// and use the module.
-//
-// This includes configuration primitives for the module itself
-// or for provided macros.
-//
-// This configuration file is used by the wf tool for documenting
-// your module on the WarpFleet™ site.
-//
+// register the extension
+warpscript.interpolation.extension  = io.warp10.ext.interpolation.InterpolationWarpScriptExtension
+
+// maximum number of elements allowed in MICROSPHERE (default to 50)
+// this value can be changed at runtime using the capability with the same name
+interpolation.microsphere.max.elements = 50
