--- a/warp10/build.gradle
+++ b/warp10/build.gradle
@@ -1,7 +1,7 @@
 import java.nio.charset.StandardCharsets
 
 //
-//   Copyright 2018-2021  SenX S.A.S.
+//   Copyright 2018-2022  SenX S.A.S.
 //
 //   Licensed under the Apache License, Version 2.0 (the "License");
 //   you may not use this file except in compliance with the License.
@@ -30,13 +30,18 @@ dependencies {
     //
     api project(':crypto')
     api project(':token')
-    api project(':hbaseFilters')
     api 'io.warp10:sensision:1.0.24'
 
     api 'joda-time:joda-time:2.2'
     api 'org.apache.commons:commons-lang3:3.6'
     api 'org.apache.commons:commons-math3:3.6'
     api 'org.bouncycastle:bcprov-jdk15on:1.68'
+
+    // https://mvnrepository.com/artifact/org.foundationdb/fdb-java
+    api 'org.foundationdb:fdb-java:7.1.15'
+
+    api 'org.apache.hadoop:hadoop-common:2.5.1'
+    api 'org.apache.hadoop:hadoop-mapreduce-client-core:2.5.1'
 
     //
     // Processing
@@ -48,44 +53,14 @@ dependencies {
     //
     api 'commons-cli:commons-cli:1.3.1'
 
-    //
-    // HBase 1.0.0
-    //
-    if (null != System.getProperty("mapr-db")) {
-      println '#### Building Warp 10 for MapR-DB ###'
-      api 'com.mapr.fs:mapr-hbase:6.0.1-mapr'
-      api('org.apache.hbase:hbase-client:1.1.8-mapr-1710') {
-        // commons-beanutils:commons-beanutils-core is an alias of commons-beanutils:commons-beanutils, which is already a transitive dependency.
-        exclude group: 'commons-beanutils', module: 'commons-beanutils-core'
-      }
-      // For BulkDeleteProtos
-      api('org.apache.hbase:hbase-examples:1.1.8-mapr-1710') {
-        // This dependency is only for a single class, avoid pulling all the useless dependencies.
-        transitive = false
-      }
-      api 'org.apache.hbase:hbase-common:1.1.8-mapr-1710'
-      api 'org.apache.hbase:hbase-protocol:1.1.8-mapr-1710'
-    } else {
-      api('org.apache.hbase:hbase-client:1.1.13') {
-        // commons-beanutils:commons-beanutils-core is an alias of commons-beanutils:commons-beanutils, which is already a transitive dependency.
-        exclude group: 'commons-beanutils', module: 'commons-beanutils-core'
-      }
-      // For BulkDeleteProtos
-      api('org.apache.hbase:hbase-examples:1.1.13') {
-        // This dependency is only for a single class, avoid pulling all the useless dependencies.
-        transitive = false
-      }
-      api 'org.apache.hbase:hbase-common:1.1.13'
-      api 'org.apache.hbase:hbase-protocol:1.1.13'
-    }
-
     // For Standalone(Chunked)MemoryStore
-    api('org.apache.hadoop:hadoop-hdfs:2.5.1')
+    api('org.apache.hadoop:hadoop-hdfs-client:3.3.4')
 
     api 'org.eclipse.jetty:jetty-server:9.4.2.v20170220'
     api 'org.eclipse.jetty.websocket:websocket-server:9.4.2.v20170220'
     api 'org.eclipse.jetty.websocket:websocket-client:9.4.2.v20170220'
-    api 'com.netflix.curator:curator-x-discovery:1.3.3'
+    // https://mvnrepository.com/artifact/org.apache.curator/curator-x-discovery
+    api 'org.apache.curator:curator-x-discovery:5.3.0'
     api 'com.fasterxml.jackson.core:jackson-databind:2.10.2'
     api 'org.slf4j:slf4j-api:1.7.5'
 
@@ -151,18 +126,7 @@ dependencies {
     api 'com.fasterxml.util:java-merge-sort:1.0.0'
 
     // @see <a href="http://www.mail-archive.com/dev@kafka.apache.org/msg03829.html>http://www.mail-archive.com/dev@kafka.apache.org/msg03829.html</a>
-    if (null != System.getProperty("mapr-streams")) {
-      println '#### Building Warp 10 for MapR Streams ###'
-      // https://mvnrepository.com/artifact/org.apache.kafka/kafka-clients
-      api group: 'org.apache.kafka', name: 'kafka-clients', version: '2.5.0'
-      //compile("org.apache.kafka:kafka_2.11:1.0.1-mapr-1803") {
-      //  exclude module: 'jms'
-      //  exclude module: 'jmxtools'
-      //  exclude module: 'jmxri'
-      //}
-      // MapR Streams
-      api("com.mapr.streams:mapr-streams:6.0.1-mapr")
-    } else if (null != System.getProperty("pulsar")) {
+    if (null != System.getProperty("pulsar")) {
       println '#### Building Warp 10 for Pulsar ###'
       // https://mvnrepository.com/artifact/org.apache.pulsar/pulsar-client-kafka
       api group: 'org.apache.pulsar', name: 'pulsar-client-kafka', version: '2.5.1'
@@ -328,4 +292,3 @@ compileJava.dependsOn("generateThrift")
 createTarArchive.dependsOn("generateChangelog")
 pack.dependsOn(":crypto:jar")
 pack.dependsOn(":token:jar")
-pack.dependsOn(":hbaseFilters:jar")
