--- a/etc/conf.templates/standalone/70--extensions.conf.template
+++ b/etc/conf.templates/standalone/70--extensions.conf.template
@@ -1,5 +1,5 @@
 //
-//   Copyright 2019  SenX S.A.S.
+//   Copyright 2019-2022  SenX S.A.S.
 //
 //   Licensed under the Apache License, Version 2.0 (the "License");
 //   you may not use this file except in compliance with the License.
@@ -54,6 +54,9 @@
 
 // SENSISIONEVENT, SENSISIONGET, SENSISIONSET, SENSISIONUPDATE
 #warpscript.extension.sensision = io.warp10.script.ext.sensision.SensisionWarpScriptExtension
+// Enable support for capabilities. When set to 'true', capabilities 'sensision.read' and 'sensision.write' can be
+// set in tokens to allow the use of functions which read or alter Sensision metrics
+#sensision.capability = true
 
 // MUTEX, SHMLOAD, SHMSTORE
 #warpscript.extension.shm = io.warp10.script.ext.shm.SharedMemoryWarpScriptExtension
