--- a/warp10/build.gradle
+++ b/warp10/build.gradle
@@ -33,9 +33,9 @@ dependencies {
     api 'io.warp10:sensision:1.0.24'
 
     api 'joda-time:joda-time:2.2'
-    api 'org.apache.commons:commons-lang3:3.6'
-    api 'org.apache.commons:commons-math3:3.6'
-    api 'org.bouncycastle:bcprov-jdk15on:1.68'
+    api 'org.apache.commons:commons-lang3:3.12.0'
+    api 'org.apache.commons:commons-math3:3.6.1'
+    api 'org.bouncycastle:bcprov-jdk15on:1.70'
 
     // https://mvnrepository.com/artifact/org.foundationdb/fdb-java
     api 'org.foundationdb:fdb-java:7.1.15'
@@ -51,14 +51,14 @@ dependencies {
     //
     // Commons CLI
     //
-    api 'commons-cli:commons-cli:1.3.1'
+    api 'commons-cli:commons-cli:1.5.0'
 
     // For Standalone(Chunked)MemoryStore
     api('org.apache.hadoop:hadoop-hdfs-client:3.3.4')
 
-    api 'org.eclipse.jetty:jetty-server:9.4.2.v20170220'
-    api 'org.eclipse.jetty.websocket:websocket-server:9.4.2.v20170220'
-    api 'org.eclipse.jetty.websocket:websocket-client:9.4.2.v20170220'
+    api 'org.eclipse.jetty:jetty-server:9.4.48.v20220622'
+    api 'org.eclipse.jetty.websocket:websocket-server:9.4.48.v20220622'
+    api 'org.eclipse.jetty.websocket:websocket-client:9.4.48.v20220622'
     // https://mvnrepository.com/artifact/org.apache.curator/curator-x-discovery
     api 'org.apache.curator:curator-x-discovery:5.3.0'
     api 'com.fasterxml.jackson.core:jackson-databind:2.10.2'
@@ -76,7 +76,7 @@ dependencies {
     api 'com.github.rwl:jtransforms:2.4.0'
 
     //
-    // Pyrolite
+    // Pyrolite - need to stick with 4.x
     //
     api 'net.razorvine:pyrolite:4.10'
 
@@ -102,7 +102,7 @@ dependencies {
     //
     // This jar includes all jansi and some hawtjni classes instead of declaring them as dependencies. Remove/update when possible.
     // See configurations.all below for jansi.
-    api 'jline:jline:2.13'
+    api 'jline:jline:2.14.6'
 
     //
     // Mustache
@@ -133,7 +133,7 @@ dependencies {
     } else {
       println '#### Building Warp 10 for Kafka ###'
       // https://mvnrepository.com/artifact/org.apache.kafka/kafka-clients
-      api group: 'org.apache.kafka', name: 'kafka-clients', version: '2.5.0'
+      api group: 'org.apache.kafka', name: 'kafka-clients', version: '3.2.1'
     }
     testCompile 'junit:junit:4.6'
 }
