--- a/etc/conf.templates/distributed/00-warp.conf.template
+++ b/etc/conf.templates/distributed/00-warp.conf.template
@@ -107,7 +107,7 @@ warp.components =
 // WarpScript map defining the default attributes to allocate to read tokens. Existing attributes will not
 // be overriden if they exist
 //
-#warp.token.read.attributes.default = { '.nofind' '' '.cap:limits' '' }
+warp.token.read.attributes.default = { '.cap:limits' '' }
 
 //
 // WarpScript map defining the default attributes to allocate to write tokens. Existing attributes will not
