--- a/etc/conf.templates/standalone/10-runner.conf.template
+++ b/etc/conf.templates/standalone/10-runner.conf.template
@@ -1,5 +1,5 @@
 //
-//   Copyright 2019  SenX S.A.S.
+//   Copyright 2019-2020  SenX S.A.S.
 //
 //   Licensed under the Apache License, Version 2.0 (the "License");
 //   you may not use this file except in compliance with the License.
@@ -40,7 +40,7 @@ runner.roles = standalone
 // runner endpoint to use for executing the scripts. If this is omitted then
 // execution will take place in the scheduling thread.
 //
-#runner.endpoint = http://127.0.0.1:8881/api/v0/exec/runner
+#runner.endpoint = http://127.0.0.1:8881/api/v0/exec
 
 //
 // 128/192/256 bits AES key for wrapping a runner nonce which can later be extracted using RUNNERNONCE.
