fix runner endpoint

--- a/etc/conf.templates/distributed/10-runner.conf.template
+++ b/etc/conf.templates/distributed/10-runner.conf.template
@@ -66,7 +66,7 @@ runner.scanperiod = 60000
 //
 // runner endpoint to use for executing the scripts
 //
-runner.endpoint = http://127.0.0.1:8881/api/v0/exec/runner
+runner.endpoint = http://127.0.0.1:8881/api/v0/exec
 
 //
 // 128/192/256 bits AES key for wrapping a runner nonce which can later be extracted using RUNNERNONCE.
