--- a/etc/conf.templates/standalone/20-warpscript.conf.template
+++ b/etc/conf.templates/standalone/20-warpscript.conf.template
@@ -214,10 +214,7 @@ warpscript.runner.bootstrap.period = 120000
 // HTTP extension
 //
 
-// If set to true, HTTP requires the stack to be authenticated
-#warpscript.http.authentication.required =
-// If set, the capability <warpscript.http.capability> is checked to grant access to HTTP function
-#warpscript.http.capability =
+// To use HTTP, you must have a token with "http" capability (value can be empty). 
 // Maximum number of HTTP calls, 1 by default, can be raised with capability http.requests
 #warpscript.http.maxrequests =
 // Maximum downloaded bytes by HTTP, 65536 by default, can be raised with capability http.size
