--- a/etc/conf.templates/distributed/70--extensions.conf.template
+++ b/etc/conf.templates/distributed/70--extensions.conf.template
@@ -59,9 +59,8 @@
 
 // SENSISIONEVENT, SENSISIONGET, SENSISIONSET, SENSISIONUPDATE
 #warpscript.extension.sensision = io.warp10.script.ext.sensision.SensisionWarpScriptExtension
-// Enable support for capabilities. When set to 'true', capabilities 'sensision.read' and 'sensision.write' can be
+// Capabilities 'sensision.read' (empty value) and 'sensision.write' (empty value) must be
 // set in tokens to allow the use of functions which read or alter Sensision metrics
-#sensision.capability = true
 
 // MUTEX, SHMLOAD, SHMSTORE
 #warpscript.extension.shm = io.warp10.script.ext.shm.SharedMemoryWarpScriptExtension
