--- a/etc/conf.templates/distributed/20-warpscript.conf.template
+++ b/etc/conf.templates/distributed/20-warpscript.conf.template
@@ -169,6 +169,7 @@ warpscript.delete.endpoint = http://127.0.0.1:8080/api/v0/delete
 
 //
 // Maximum amount of time each attempt to access a process will wait (in ms). Defaults to 10000 ms.
+// This value can also be overridden with call.maxwait capability.
 //
 #warpscript.call.maxwait = 10000
 
