force the capability name for timebox max bound

--- a/etc/conf.templates/distributed/20-warpscript.conf.template
+++ b/etc/conf.templates/distributed/20-warpscript.conf.template
@@ -27,9 +27,8 @@
 #processing.font.resolver = NOOP
 
 // Maximum time that TIMEBOX can wait for an execution (in ms), defaults to 30s
+// This value can be overridden with the timebox.maxtime capability (with capability value in ms)
 #warpscript.timebox.maxtime=30000
-// Capability name for extending the previous value per warpscript
-#warpscript.timebox.maxtime.capname=
 
 // Path of the 'bootstrap' WarpScript code for the interactive mode
 #warpscript.interactive.bootstrap.path =
