Added config for default capabilities

--- a/etc/conf.templates/distributed/20-warpscript.conf.template
+++ b/etc/conf.templates/distributed/20-warpscript.conf.template
@@ -225,3 +225,8 @@ warpscript.comments.loose = true
 // Defaults to .producer,.app,.owner
 //
 #warpscript.labels.priority =
+
+//
+// Default capabilities
+//
+#warp.capabilities.default = { 'limits' '' }
