remove remaining references to removed function of 3.x

--- a/etc/conf.templates/distributed/70--extensions.conf.template
+++ b/etc/conf.templates/distributed/70--extensions.conf.template
@@ -67,14 +67,14 @@
 // SHM ttl in ms, default = 1 hour
 #shm.ttl = 3600000
 
-// TOKENDUMP, TOKENGEN, TOKENSECRET
+// TOKENDUMP, TOKENGEN
 #warpscript.extension.token = io.warp10.script.ext.token.TokenWarpScriptExtension
 
 // HTTP
 #warpscript.extension.http = io.warp10.script.ext.http.HttpWarpScriptExtension
 // see also warpscript.http.* configurations in 20-warpscript.conf
 
-// WSPS WSINFO WSKILL STACKPSSECRET
+// WSPS WSINFO WSKILL
 #warpscript.extension.stackps = io.warp10.script.ext.stackps.StackPSWarpScriptExtension
 
 //
