--- a/etc/conf.templates/standalone/70--extensions.conf.template
+++ b/etc/conf.templates/standalone/70--extensions.conf.template
@@ -67,7 +67,7 @@
 // SHM ttl in ms, default = 1 hour
 #shm.ttl = 3600000
 
-// TOKENDUMP, TOKENGEN, TOKENSECRET
+// TOKENDUMP, TOKENGEN
 #warpscript.extension.token = io.warp10.script.ext.token.TokenWarpScriptExtension
 
 // HTTP
@@ -77,7 +77,7 @@
 // DEVAL
 #warpscript.extension.sharding = io.warp10.script.ext.sharding.ShardingWarpScriptExtension
 
-// WSPS WSINFO WSKILL STACKPSSECRET
+// WSPS WSINFO WSKILL
 #warpscript.extension.stackps = io.warp10.script.ext.stackps.StackPSWarpScriptExtension
 
 //
