--- a/warp10/src/main/resources/log4j.properties
+++ b/warp10/src/main/resources/log4j.properties
@@ -1,4 +1,4 @@
 #log4j.rootLogger=ERROR, CONSOLE
 log4j.appender.CONSOLE=org.apache.log4j.ConsoleAppender
 log4j.appender.CONSOLE.layout=org.apache.log4j.PatternLayout
-log4j.logger.io.warp10.continuum.egress.EgressExecEinsteinHandler=INFO,CONSOLE
+log4j.logger.io.warp10.continuum.egress.EgressExecHandler=INFO,CONSOLE
