--- a/etc/conf.templates/distributed/10-webcall.conf.template
+++ b/etc/conf.templates/distributed/10-webcall.conf.template
@@ -1,5 +1,5 @@
 //
-//   Copyright 2019-2022  SenX S.A.S.
+//   Copyright 2019-2023  SenX S.A.S.
 //
 //   Licensed under the Apache License, Version 2.0 (the "License");
 //   you may not use this file except in compliance with the License.
@@ -47,7 +47,7 @@ webcall.kafka.topic = ${kafka.webcall.topic}
 ##
 ## MANDATORY (webcall) - Group id to use for consuming WebCall requests
 ##
-webcall.kafka.groupid = webcall-localhost
+webcall.kafka.groupid = webcall
 
 ##
 ## MANDATORY (webcall) - How often (in ms) to commit the Kafka offsets
