--- a/etc/conf.templates/distributed/10-directory.conf.template
+++ b/etc/conf.templates/distributed/10-directory.conf.template
@@ -1,5 +1,5 @@
 //
-//   Copyright 2019-2022  SenX S.A.S.
+//   Copyright 2019-2023  SenX S.A.S.
 //
 //   Licensed under the Apache License, Version 2.0 (the "License");
 //   you may not use this file except in compliance with the License.
@@ -93,7 +93,7 @@ directory.kafka.metadata.topic = ${kafka.metadata.topic}
 ##
 ## MANDATORY - Kafka group id with which to consume the metadata topic
 ##
-directory.kafka.metadata.groupid = directory.metadata-localhost
+directory.kafka.metadata.groupid = directory.metadata
 
 ##
 ## MANDATORY - Delay between synchronizations for offset commit
