--- a/etc/conf.templates/distributed/10-runner.conf.template
+++ b/etc/conf.templates/distributed/10-runner.conf.template
@@ -1,5 +1,5 @@
 //
-//   Copyright 2019-2022  SenX S.A.S.
+//   Copyright 2019-2023  SenX S.A.S.
 //
 //   Licensed under the Apache License, Version 2.0 (the "License");
 //   you may not use this file except in compliance with the License.
@@ -32,7 +32,7 @@ runner.roles = standalone
 ##
 ## MANDATORY - String uniquely identifying this instance of ScriptRunner
 ##
-runner.id = runner-localhost-1
+runner.id = runner-1
 
 ##
 ## MANDATORY (standalone/worker) - WarpScript endpoint to use for executing the scripts
@@ -80,7 +80,7 @@ runner.zk.quorum = ${zk.quorum}
 ##
 ## MANDATORY (scheduler) - Znode to use for the leader election among schedulers
 ##
-runner.zk.znode = /zk/warp/localhost/runner
+runner.zk.znode = /zk/warp/${warp10.instance}/runner
 
 ##
 ## MANDATORY (scheduler/worker) - Topic to use to submit the scripts
