--- a/etc/conf.templates/distributed/99-quickstart.conf.template
+++ b/etc/conf.templates/distributed/99-quickstart.conf.template
@@ -1,5 +1,5 @@
 //
-//   Copyright 2022  SenX S.A.S.
+//   Copyright 2022-2023  SenX S.A.S.
 //
 //   Licensed under the Apache License, Version 2.0 (the "License");
 //   you may not use this file except in compliance with the License.
@@ -13,6 +13,8 @@
 //   See the License for the specific language governing permissions and
 //   limitations under the License.
 //
+
+warp10.instance = RENAME.ME.PLEASE
 
 aes.key = hex:.....
 mac.key = hex:.....
