--- a/etc/conf.templates/standalone/10-headers.conf.template
+++ b/etc/conf.templates/standalone/10-headers.conf.template
@@ -1,5 +1,5 @@
 //
-//   Copyright 2019  SenX S.A.S.
+//   Copyright 2019-2023  SenX S.A.S.
 //
 //   Licensed under the Apache License, Version 2.0 (the "License");
 //   you may not use this file except in compliance with the License.
@@ -13,11 +13,6 @@
 //   See the License for the specific language governing permissions and
 //   limitations under the License.
 //
-
-//
-// Header containing the request UUID when calling the endpoint
-//
-#http.header.webcall.uuid = 
 
 //
 // HTTP Header for elapsed time of warpscript scripts
