--- a/etc/conf.templates/distributed/99-quickstart.conf.template
+++ b/etc/conf.templates/distributed/99-quickstart.conf.template
@@ -16,9 +16,9 @@
 
 warp10.instance = RENAME.ME.PLEASE
 
-aes.key = hex:.....
-mac.key = hex:.....
-hash.key = hex:.....
+#aes.key = hex:.....
+#mac.key = hex:.....
+#hash.key = hex:.....
 
 components = ingress,directory,store,egress
 
