--- a/etc/conf.templates/standalone/00-warp.conf.template
+++ b/etc/conf.templates/standalone/00-warp.conf.template
@@ -25,7 +25,7 @@
 // with JDK9+, those libraries may fail to parse the java version. This configuration key
 // can be used to force the "java.version" property to the given value.
 //
-#java.version = 1.11.0
+#warp.java.version = 1.11.0
 
 //
 // Set to true to only run the Warp 10™ Analytics Engine
