Commented reproducible build conf

--- a/crypto/build.gradle
+++ b/crypto/build.gradle
@@ -51,7 +51,7 @@ publishing {
 //
 // Reproducible builds
 //
-tasks.withType(AbstractArchiveTask).configureEach {
-  preserveFileTimestamps = false
-  reproducibleFileOrder = true
-}
+//tasks.withType(AbstractArchiveTask).configureEach {
+//  preserveFileTimestamps = false
+//  reproducibleFileOrder = true
+//}
