Modified fdb.clusterfile in 98-quickstart

--- a/etc/conf.templates/distributed/98-quickstart.conf.template
+++ b/etc/conf.templates/distributed/98-quickstart.conf.template
@@ -22,7 +22,7 @@ warp10.instance = RENAME.ME.PLEASE
 
 components = ingress,directory,store,egress
 
-fdb.clusterfile = /path/to/fdb.cluster
+fdb.clusterfile = ${warp10.home}/etc/fdb.cluster
 fdb.data.aes = ${aes.key}
 fdb.metadata.aes = ${aes.key}
 
