add leveldb and fdb functions to warpscript package

--- a/warpscript/build.gradle
+++ b/warpscript/build.gradle
@@ -23,7 +23,9 @@ sourceSets {
             include 'io/warp10/SortedPathIterator.*'
             include 'io/warp10/SortedPathIterator$*'
             include 'io/warp10/WarpClassLoader.*'
+            include 'io/warp10/fdb/**'
             include 'io/warp10/json/**'
+            include 'io/warp10/leveldb/**'
             include 'io/warp10/script/**'
             exclude 'io/warp10/script/ScriptRunner*.*'
             include 'io/warp10/CapacityExtractorOutputStream.*'
