--- a/etc/conf.templates/standalone/00-warp.conf.template
+++ b/etc/conf.templates/standalone/00-warp.conf.template
@@ -243,6 +243,11 @@ warp.token.read.attributes.default = { '.cap:limits' '' }
 # warp.trl.startup.delay = 60000
 
 //
+// Maximum length of class names - Defaults to 1024
+//
+#warp.class.maxsize = 1024
+
+//
 // Maximum length of labels (names + values) - Defaults to 2048
 //
 #warp.labels.maxsize = 2048
@@ -251,6 +256,13 @@ warp.token.read.attributes.default = { '.cap:limits' '' }
 // Maximum length of attributes (names + values) - Defaults to 8192
 //
 #warp.attributes.maxsize = 8192
+
+//
+// When using a standalone version with no replication to a FoundationDB based instance
+// the limit of metadata size (class + attribtues + labels) can be relaxed by setting this
+// configuration to 'true' to simply emit a warning.
+//
+#warp.relax.metadata.maxsize = true
 
 //
 // Set to true to expose owner and producer labels in Geo Time Series retrieved from the Warp 10 Storage Engine 
